[package]
name = "data_query"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
dotenvy = "0.15.7"
lapin = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
anyhow = "1.0.98"
toml = "0.8.23"
